// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BannerTitle /> should renders correctly 1`] = `
<BannerTitle
  promotionType="3-by-2"
>
  1+1=3
</BannerTitle>
`;

exports[`<BannerTitle /> should renders correctly 2`] = `
<BannerTitle
  promotionType="special"
/>
`;

exports[`<BannerTitle /> should renders correctly 3`] = `
<BannerTitle
  dueDate={2021-01-10T09:00:00.000Z}
  promotionType="special"
>
  <CustomTimer
    dueDate={2021-01-10T09:00:00.000Z}
  >
    <Timer
      date="2021-01-10T09:00:00Z"
      format={[Function]}
      timeout={60000}
    >
      <div
        className="timer"
        data-testid="promotion-card:banner-timer"
      >
        <TimerPart
          label="дней"
          value={9}
        >
          <div
            className="part"
          >
            <div>
              09
            </div>
            <div
              className="label"
            >
              дней
            </div>
          </div>
        </TimerPart>
        <TimerDivider>
          <div
            className="divider"
          >
            :
          </div>
        </TimerDivider>
        <TimerPart
          label="часов"
          value={0}
        >
          <div
            className="part"
          >
            <div>
              00
            </div>
            <div
              className="label"
            >
              часов
            </div>
          </div>
        </TimerPart>
        <TimerDivider>
          <div
            className="divider"
          >
            :
          </div>
        </TimerDivider>
        <TimerPart
          label="минут"
          value={0}
        >
          <div
            className="part"
          >
            <div>
              00
            </div>
            <div
              className="label"
            >
              минут
            </div>
          </div>
        </TimerPart>
      </div>
    </Timer>
  </CustomTimer>
</BannerTitle>
`;

exports[`<BannerTitle /> should renders correctly 4`] = `
<BannerTitle
  promotionType="volume-discount"
/>
`;

exports[`<BannerTitle /> should renders correctly 5`] = `
<BannerTitle
  promotionType="volume-discount"
  volumeDiscount={45}
>
  <div
    className="discount"
    data-testid="promotion-card:banner-discount"
  >
    скидки до
    <div
      className="percent"
    >
      45
      %
    </div>
  </div>
</BannerTitle>
`;
